# webtools

./: .gitignore  PROJECT_OVERVIEW.md  README.md  audio-editor.html  create_favicon.py  fix_nav.py  image-converter-wasm.html  image-converter.html  image-converter2.html  image-editor.html  image-resize.html  image-resize.html.bak  index.html  netlify.toml  pdf-editor.html  programs.html  start_server.sh  stop_server.sh  subtitle-converter.html  subtitle-translator.html  test-image-converter.html  update_all_pages.py
.cursor/rules/: mode-guidance.mdc  myrule.mdc  webtools-development-rules.mdc
api/: DEVELOPMENT_NOTES.md  app.py  test_api.py  test_image.py  wsgi.py
api/image_converter/: image_handler.py
api/subtitle_converter/: subtitle_handler.py
components/: header.html
css/: header.css  style.css
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AudioEditor.css  AudioEditor.jsx  Base64Converter.css  Base64Converter.jsx  IPInfo.css  IPInfo.jsx  ImageConverter.css  ImageConverter.jsx  (+12 more)
js/: api-config.js  audio-editor.js  header-loader.js  image-converter-wasm.js  image-converter.js  image-converter.js.bak  image-converter.js.new  image-resize.js  language-switcher.js  main.js  resize-fix.txt  subtitle-converter.js
test_images/: test_all_conversions.py  test_conversion.py  test_heif.py  test_heif_conversion.py  test_svg_conversion.py
test_resize/: test_resize.py
uploads/images/: ComfyUI_00020__40b1f504.tiff
wasm/: CMakeLists.txt  image_processor.cpp
(+24 files in other folders)
